--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-        <div class="container-fluid blue height" style="margin-bottom: 0; z-index: 9999;">
+        <div class="container-fluid blue height" style="margin-bottom: 0;">
             <div class="container gray height">
                 <div class="row">
                     <div class="col" style="height: 180px;">
