--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,20 +10,20 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark gray fixed-top" id="page-up">
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark gray" id="page-up">
             <!-- <a class="navbar-brand" href="#">Navbar</a> -->
             <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button> -->
-            <div id="nav-icon3" class="hidden navbar-toggler navbar-fixed" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+            <div id="nav-icon3" class="hidden navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
-            <div class="collapse navbar-collapse navbar-fixed" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li>
                         <hr class="hidden white-text" style="border-color: #fff;">
