--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,7 +14,9 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <div class="image-container"></div>
+                <div class="image-container">
+                    <img src="/images/me.jpeg" alt="Scott Selke at Slide Rock Municiple Park" class="responsive-image" />
+                </div>
                 <div class="wrapper content">
                     <h4>Scott Selke | Web Developer and Designer</h4>
                     <p>I currently work on many personal projects for friends, family, and myself. These projects range from
