--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-        <div class="container-fluid blue height" style="margin-bottom: 0;">
-            <div class="container gray height">
+        <div class="container-fluid blue" style="margin-bottom: 0;">
+            <div class="container gray">
                 <div class="row">
                     <div class="col" style="height: 180px;">
                         <div class="social-container">
@@ -20,7 +20,7 @@
                             </a>
                         </div>
 
-                        <p class="white" style="margin-top: 24px;">
+                        <p class="white footer-break" style="margin-top: 24px;">
                             <a class="white" href="/portfolio">Portfolio</a>   <span>::</span>  
                             <a class="white" href="/about">About</a>   <span>::</span>  
                             <a class="white" href="/resources">Resourses</a>   <span>::</span>  
@@ -29,11 +29,6 @@
                         </p>
 
                         <p class="footer-text">Copyright Scott Selke | 2018</p>
-                        <!-- <div class="triangle-container">
-                            <a class="center" href="top">
-                                <div class="triangle"></div>
-                            </a>
-                        </div> -->
                     </div>
                 </div>
             </div>
