--- a/Public/Assets/css/main.css
+++ b/Public/Assets/css/main.css
@@ -361,9 +361,10 @@ h1 {
   }
 }
 
-.height {
-  height: 180px;
-  bottom: 0;
+@media screen and (max-width: 500px) {
+  .footer-break {
+    font-size: 16px;
+  }
 }
 
 .dark-blue {
