--- a/Public/Sass/Pages/about.scss
+++ b/Public/Sass/Pages/about.scss
@@ -2,14 +2,19 @@
 
 .image-container{
     margin: 0 auto 24px auto;
-    height: 400px;
-    width: 400px;
-    background: url('../../images/me.jpeg') no-repeat;
-    background-size: 400px 400px;
+    width: 100%;
+    max-width: 400px;
+}
+
+.responsive-image{
+    height: auto;
+    width: 100%;
+    max-height: 400px;
+    max-width: 400px;
 }
 .wrapper{
     max-width: 535px;
-    margin: 0 auto 100px auto;
+    margin: 0 auto 50px auto;
     
     & > p{
         text-align: justify;
@@ -22,6 +27,7 @@
         margin: 20px auto 0 auto;
 
         & > button{
+            margin: 25px auto;
             width: 50%;
         }
     }
