--- a/Public/Sass/Partials/_footer.scss
+++ b/Public/Sass/Partials/_footer.scss
@@ -1,6 +1,7 @@
-.height{
-    height: 180px;
-    bottom: 0;
+.footer-break{
+    @media screen and (max-width: 500px){
+        font-size: 16px;
+    }
 }
 
 .dark-blue{
