--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -46,12 +46,12 @@
                 <i class="fas fa-cogs resource-icon resource-icon-cog"></i>
             </div>
             <h4>Intelligent</h4>
-            <p>
+            <p id="description">
                 Front-end and Back-end designed to co-operate with each other perfectly.
             </p>
         </div>
     </div>
-    <div id="description"></div>
+    <div></div>
     <div class="row">
         <div class="col-lg-6 col-md-12 desc">
             <section class="html visible">
