--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -11,10 +11,10 @@
         <div class="page-header-line"></div>
     </div>
 
-<div class="container-fluid form-container contact-container">
+<div class="container-fluid contact-container" style="margin: auto;">
     <h1>Let's chat, I would like to meet you.</h1>
     <div class="row">
-        <div class="container" style="width: 50%; position: relative;">
+        <div class="container form-container">
             <form action="/contact" method="POST">
                 <div class="form-row">
                     <div class="form-group col-lg-4 col-md-12">
