--- a/Public/Assets/css/contact.css
+++ b/Public/Assets/css/contact.css
@@ -363,7 +363,7 @@ h1 {
 
 @media screen and (max-width: 500px) {
   .footer-break {
-    font-size: 16px;
+    font-size: 12px;
   }
 }
 
@@ -429,6 +429,13 @@ i {
 
 .form-container {
   margin: auto;
+  width: 50%;
+  min-width: 400px;
+}
+
+.form-group {
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
 }
 
 /*# sourceMappingURL=../Assets/css/contact.css.map */
