--- a/Public/Sass/Pages/contact.scss
+++ b/Public/Sass/Pages/contact.scss
@@ -11,4 +11,11 @@
 
 .form-container{
     margin: auto;
+    width: 50%;
+    min-width: 400px;
+}
+
+.form-group{
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
 }
