Resource bug fix

--- a/Public/Assets/css/resources.css
+++ b/Public/Assets/css/resources.css
@@ -425,10 +425,11 @@ i {
 }
 
 .skills {
-  width: 400px;
-  max-width: 960px;
+  width: 100%;
+  max-width: 400px;
   height: 750px;
   margin: 24px auto;
+  box-sizing: border-box;
   position: relative;
 }
 
