--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -51,7 +51,7 @@
             </p>
         </div>
     </div>
-    <div></div>
+    <div id="description"></div>
     <div class="row">
         <div class="col-lg-6 col-md-12 desc">
             <section class="html visible">
