--- a/Public/Assets/css/about.css
+++ b/Public/Assets/css/about.css
@@ -451,4 +451,4 @@ i {
   width: 50%;
 }
 
-/*# sourceMappingURL=../Assets/css/about.css.map */
+/*# sourceMappingURL=../../Assets/css/about.css.map */
