--- a/Public/Assets/css/contact.css
+++ b/Public/Assets/css/contact.css
@@ -438,4 +438,4 @@ i {
   margin-bottom: 20px !important;
 }
 
-/*# sourceMappingURL=../Assets/css/contact.css.map */
+/*# sourceMappingURL=../../Assets/css/contact.css.map */
