--- a/Public/Assets/css/main.css
+++ b/Public/Assets/css/main.css
@@ -420,4 +420,4 @@ i {
   text-align: center;
 }
 
-/*# sourceMappingURL=../Assets/css/main.css.map */
+/*# sourceMappingURL=../../Assets/css/main.css.map */
