--- a/Public/Sass/Pages/portfolio.scss
+++ b/Public/Sass/Pages/portfolio.scss
@@ -1,1 +1,21 @@
 @import "header_footer";
+
+.card{
+    height: 300px;
+    width: 356px;
+    background: blue !important;
+    border-radius: 0px !important;
+}
+
+.card-col{
+    height: 300px;
+    width: 356px !important;
+    margin: 0;
+    padding: 0 !important;
+}
+
+.card-row{
+    margin: 0;
+    padding: 0;
+    width: 712px !important;
+}
