--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -11,61 +11,14 @@
         <div class="page-header-line"></div>
     </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 col-xs-12">
-            <div class="jumbotron">
-                
+    <div class="container">
+        <div class="row card-row">
+            <div class="col card-col">
+                <div class="card" style="background: red !important"></div>
             </div>
-        </div>
-        <div class="col-md-4 col-xs-12">
-            <div class="jumbotron">
-                
-            </div>
-        </div>
-        <div class="col-md-4 col-xs-12">
-            <div class="jumbotron">
-                Hello
+            <div class="col card-col">
+                <div class="card"></div>
             </div>
         </div>
     </div>
-
-    <div class="row">
-        <div class="col-md-4 col-xs-12">
-            <div class="jumbotron">
-                Hello
-            </div>
-        </div>
-        <div class="col-md-4 col-xs-12">
-            <div class="jumbotron">
-                Hello
-            </div>
-        </div>
-        <div class="col-md-4 col-xs-12">
-            <div class="jumbotron">
-                Hello
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-4 col-xs-12">
-            <div class="jumbotron">
-                Hello
-            </div>
-        </div>
-        <div class="col-md-4 col-xs-12">
-            <div class="jumbotron">
-                Hello
-            </div>
-        </div>
-        <div class="col-md-4 col-xs-12">
-            <div class="jumbotron">
-                Hello
-            </div>
-        </div>
-    </div>
-
-</div>
-
 <% include partials/footer %>
