Images making page load too slow

--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -51,7 +51,7 @@
             </p>
         </div>
     </div>
-    <div id="description"></div>
+    <!-- <div id="description"></div>
     <div class="row">
         <div class="col-lg-6 col-md-12 desc">
             <section class="html visible">
@@ -194,6 +194,14 @@
                 </span>
                 <p>My personal favorite aspect of a website is how the user interacts, and navigates with the page. There is nothing that I dislike more than a webpage that is not user friendly and intuitive.</p>
             </section>
+        </div> -->
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    
+                </div>
+            </div>
         </div>
         <div class="col-lg-6 col-md-12">
             <aside class="clearfix">
